tests/sksl/errors/Ossfuzz56373.glsl
### Compilation failed:

error: 2: expected a type, found 'bufferThree'
layout (binding=0) uniform bufferThree t;
                           ^^^^^^^^^^^
error: 2: invalid type
layout (binding=0) uniform bufferThree t;
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 errors
